src/scss/blocks/_sidebar.scss
.sidebar {
  & {
    background-color: $color-brown;
    display: flex;
    flex-direction: column;
    padding-top: 10px;
    user-select: none;
  }
  &__icon {
    display: block;
  }
  &__link, &__new-note-btn, &__categories-title {
    padding-left: 15px;
    padding-right: 15px;
  }
  &__new-note-btn {
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    align-items: center;
    color: $color-white;
    column-gap: 10px;
    font-weight: 600;

    .sidebar__add-icon {
      font-size: 19px;
      border-radius: 4px;
      background-color: $color-blue;
      color: $color-white;
    }

    &:hover {
      background-color: $color-blue;
    }
  }
  &__nav-icon {
    font-size: 15px;
    color: $color-white-025
  }
  &__nav {
    margin-top: 20px;
    font-size: 14px;
    color: $color-white;
  }
  &__link {
    height: 40px;
    display: flex;
    align-items: center;
    column-gap: 10px;

    &:hover {
      background-color: $color-light-brown;

      .sidebar__nav-icon {
        color: $color-white;
      }
    }
    &--active {
      background-color: $color-black-03 !important;

      .sidebar__nav-icon {
        color: $color-blue !important;
      }
    }
  }
  &__add-category-btn {

    &:hover {
      color: $color-white;
    }

    .sidebar__add-icon {
      font-size: 22px;
    }
  }
  &__arrow-icon {
    font-size: 20px;

    &--rotated {
      transform: rotateZ(-90deg);
    }
  }
  &__categories {
    flex: 1 0 0;
    display: flex;
    flex-direction: column;
  }
  &__categories-title {
    flex: 0 0 auto;
    line-height: 1em;
    margin-top: 20px;
    color: $color-white-025;
    font-size: 14px;
    display: flex;
    justify-content: space-between;
    user-select: none;
  }
  &__categories-title-body {
    cursor: pointer;
    column-gap: 8px;
    display: flex;
    align-items: center;
    text-transform: uppercase;

    &:hover .sidebar__arrow-icon {
      color: $color-white;
    }
  }
  &__categories-list {
    flex: 1 0 0;
    overflow: auto;
    margin-top: 10px;
  }
  &__add-category-form {
    padding: 0 15px;
    
    &--hidden {
      display: none;
    }
  }
  &__category-name-input {
    margin-top: 10px;
    width: 100%;
    border: 3px solid $color-blue-05;
    color: $color-white;
    padding: 8px;
    font-size: 15px;
    background-color: $color-black-03;

    &--error {
      border-color: $color-red !important;
    }
  }
}

